--- a/app/src/main/res/layout/fragment_time_line.xml
+++ b/app/src/main/res/layout/fragment_time_line.xml
@@ -15,7 +15,7 @@
     <com.g.laurent.alitic.Views.TimeLineRecyclerView
             android:id="@+id/timeline_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:padding="5dp"/>
 
