--- a/app/src/main/res/layout/pick_event_layout.xml
+++ b/app/src/main/res/layout/pick_event_layout.xml
@@ -9,6 +9,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:numColumns="3"
+            android:listSelector="@android:color/transparent"
             android:verticalSpacing="5dp"
             android:horizontalSpacing="5dp"
             android:layout_marginTop="10dp"
