--- a/app/src/main/res/layout/pick_meal_layout.xml
+++ b/app/src/main/res/layout/pick_meal_layout.xml
@@ -37,6 +37,7 @@
                     android:layout_height="match_parent"
                     android:overScrollMode="never"
                     android:numColumns="3"
+                    android:listSelector="@android:color/transparent"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="5dp"
                     android:layout_marginStart="10dp"
