--- a/app/src/main/res/layout/pick_event_layout.xml
+++ b/app/src/main/res/layout/pick_event_layout.xml
@@ -38,6 +38,7 @@
                 android:layout_height="@dimen/button_height"
                 android:text="@string/cancel"
                 android:textColor="@color/colorAccent"
+                style="?android:attr/borderlessButtonStyle"
                 android:background="@android:color/white"/>
 
         <!-- BUTTON SAVE -->
@@ -48,6 +49,7 @@
                 android:layout_marginStart="10dp"
                 android:text="@string/save"
                 android:textColor="@android:color/white"
+                style="?android:attr/borderlessButtonStyle"
                 android:background="@color/colorAccent"/>
 
     </LinearLayout>
