--- a/app/src/main/res/layout/pick_meal_dialog.xml
+++ b/app/src/main/res/layout/pick_meal_dialog.xml
@@ -46,6 +46,7 @@
                 android:layout_height="@dimen/button_height"
                 android:text="@string/cancel"
                 android:textColor="@color/colorAccent"
+                style="?android:attr/borderlessButtonStyle"
                 android:background="@android:color/white"/>
 
         <!-- BUTTON SAVE -->
@@ -56,6 +57,7 @@
                 android:layout_marginStart="10dp"
                 android:text="@string/save"
                 android:textColor="@android:color/white"
+                style="?android:attr/borderlessButtonStyle"
                 android:background="@color/colorAccent"/>
 
     </LinearLayout>
