--- a/app/src/main/res/layout/settings_layout.xml
+++ b/app/src/main/res/layout/settings_layout.xml
@@ -94,6 +94,7 @@
                 android:layout_weight="2"
                 android:background="@null"
                 android:layout_height="wrap_content"
+                style="?android:attr/borderlessButtonStyle"
                 android:text="@string/reset"
                 android:layout_marginStart="10dp"/>
 
