--- a/app/src/main/res/layout/add_event_type.xml
+++ b/app/src/main/res/layout/add_event_type.xml
@@ -18,6 +18,7 @@
             android:background="@android:color/white">
 
             <TextView
+                    android:id="@+id/title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/addeventtype"
@@ -30,6 +31,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
+                    android:backgroundTint="@color/colorAccent"
+                    android:importantForAutofill="no"
                     android:hint="@string/name_addeventtype"
                     android:inputType="text"/>
 
@@ -50,10 +53,12 @@
                 <RadioButton android:id="@+id/take_last_meal"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
+                             android:buttonTint="@color/colorAccent"
                              android:text="@string/take_last_meal_add_eventtype"/>
                 <RadioButton android:id="@+id/select_period"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
+                             android:buttonTint="@color/colorAccent"
                              android:text="@string/select_period_add_eventtype"/>
             </RadioGroup>
 
@@ -76,16 +81,35 @@
 
     </FrameLayout>
 
-    <!-- BUTTON SAVE -->
-    <Button
-            android:id="@+id/button_save_eventtype"
-            android:layout_width="@dimen/button_width"
-            android:layout_height="@dimen/button_height"
-            android:layout_gravity="end|bottom"
-            android:layout_marginTop="15dp"
-            android:text="@string/save"
-            style="?android:attr/borderlessButtonStyle"
-            android:textColor="@color/colorAccent"
-            android:background="@android:color/white"/>
+    <!-- BUTTONS -->
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_gravity="end"
+            android:orientation="horizontal">
+
+        <!-- BUTTON QUIT -->
+        <Button
+                android:id="@+id/button_cancel"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:text="@string/cancel"
+                android:textColor="@color/colorAccent"
+                style="?android:attr/borderlessButtonStyle"
+                android:background="@android:color/white"/>
+
+        <!-- BUTTON SAVE -->
+        <Button
+                android:id="@+id/button_save_eventtype"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:layout_marginStart="10dp"
+                android:text="@string/save"
+                android:textColor="@android:color/white"
+                style="?android:attr/borderlessButtonStyle"
+                android:background="@color/colorAccent"/>
+
+    </LinearLayout>
 
 </LinearLayout>
