--- a/app/src/main/res/layout/fragment_stat_detail.xml
+++ b/app/src/main/res/layout/fragment_stat_detail.xml
@@ -10,6 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:baselineAligned="false"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@drawable/background_header_panel"
