--- a/app/src/main/res/layout/legend_calendar.xml
+++ b/app/src/main/res/layout/legend_calendar.xml
@@ -17,82 +17,50 @@
             android:layout_margin="10dp"
             android:lines="1"/>
 
-    <LinearLayout
-            android:id="@+id/layout_event_meal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/title_legend"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
 
-        <ImageView
-                android:id="@+id/icon_meal_event"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/background_event_and_meal"/>
 
         <TextView
                 android:id="@+id/text_meal_event"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
+                android:layout_below="@+id/title_legend"
+                android:layout_margin="10dp"
                 android:textSize="16sp"
                 android:text="@string/text_meal_and_event"
+                android:drawableStart="@drawable/background_event_and_meal"
+                android:drawablePadding="10dp"
                 android:lines="2"
                 android:layout_marginStart="10dp"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-            android:id="@+id/layout_meal_only"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/layout_event_meal"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
-
-        <ImageView
-                android:id="@+id/icon_meal_only"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/background_meal_only"/>
 
         <TextView
                 android:id="@+id/text_meal_only"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
+                android:layout_below="@+id/text_meal_event"
+                android:layout_margin="10dp"
                 android:textSize="16sp"
                 android:text="@string/text_meal_only"
+                android:drawableStart="@drawable/background_meal_only"
+                android:drawablePadding="10dp"
                 android:lines="2"
                 android:layout_marginStart="10dp"/>
-    </LinearLayout>
-
-    <LinearLayout
-            android:id="@+id/layout_event_only"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/layout_meal_only"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
-
-        <ImageView
-                android:id="@+id/icon_event_only"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/background_event_only"/>
 
         <TextView
                 android:id="@+id/text_event_only"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:textSize="16sp"
+                android:layout_below="@+id/text_meal_only"
+                android:layout_margin="10dp"
                 android:text="@string/text_event_only"
+                android:drawableStart="@drawable/background_event_only"
+                android:drawablePadding="10dp"
                 android:gravity="center_vertical"
                 android:lines="2"
                 android:layout_marginStart="10dp"/>
 
-    </LinearLayout>
 
     <TextView
             android:id="@+id/text_click_allowance"
@@ -101,7 +69,7 @@
             android:textSize="16sp"
             android:textStyle="italic"
             android:text="@string/click_allowance"
-            android:layout_below="@+id/layout_event_only"
+            android:layout_below="@+id/text_event_only"
             android:layout_margin="10dp"/>
 
     <!-- BUTTON OK -->
