--- a/app/src/main/res/layout/settings_layout.xml
+++ b/app/src/main/res/layout/settings_layout.xml
@@ -3,115 +3,116 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingHorizontal="10dp"
-        android:paddingVertical="20dp">
+        android:padding="20dp">
 
     <TextView
-        android:id="@+id/title_settings"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/title_settings"
-        android:textSize="25sp"
-        android:gravity="center_horizontal"/>
+            android:id="@+id/settings_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="25dp"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
 
-    <!--NAME USER -->
-    <LinearLayout
-            android:id="@+id/layout_user_name"
+    <RelativeLayout
+            android:id="@+id/layout_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:gravity="center_vertical"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/title_settings">
+            android:layout_below="@+id/settings_title">
 
         <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:id="@+id/foodtype_title"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/name_user"/>
+                android:text="@string/col_foodtype"
+                android:layout_centerVertical="true"/>
 
-        <EditText
-                android:id="@+id/name_user"
-                android:layout_width="0dp"
-                android:layout_weight="3"
+        <Spinner
+                android:id="@+id/spinner_foodtype"
+                style="@style/SpinnerSetting"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/foodtype_title"
+                android:layout_centerVertical="true"
+                android:layout_marginHorizontal="15dp"/>
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+            android:id="@+id/layout_headers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layout_spinner"
+            android:layout_marginTop="15dp">
+
+        <TextView
+                android:id="@+id/header_col_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/food_settings_header_col_start"
+                android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"/>
 
-    </LinearLayout>
-
-    <!-- EXPORT DATA AS EXCEL SHEET -->
-    <LinearLayout
-            android:id="@+id/layout_export"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:gravity="center_vertical"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/layout_user_name">
-
         <TextView
-                android:layout_width="0dp"
-                android:layout_weight="3"
+                android:id="@+id/header_col_end"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/export_data_excel"/>
+                android:text="@string/food_settings_header_col_end"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp"/>
 
-        <ImageButton
-                android:id="@+id/button_export"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:background="@null"
-                android:src="@drawable/excel"/>
+    </RelativeLayout>
 
-    </LinearLayout>
-
-    <!-- RESET DATA -->
-    <LinearLayout
-            android:id="@+id/layout_reset"
+    <View
+            android:id="@+id/line_separator"
             android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_below="@+id/layout_headers"
+            android:background="#c0c0c0"/>
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="210dp"
+            android:layout_below="@+id/line_separator"
+            android:scrollbars="vertical"
+            android:fadeScrollbars="false"
+            android:scrollbarThumbVertical="@android:color/darker_gray"/>
+
+    <!-- BUTTONS -->
+    <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:gravity="center_vertical"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/layout_export">
-
-        <TextView
-                android:layout_width="0dp"
-                android:layout_weight="3"
-                android:layout_height="wrap_content"
-                android:text="@string/reset_data"/>
-
-        <Button
-                android:id="@+id/button_reset"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:background="@null"
-                android:layout_height="wrap_content"
-                style="?android:attr/borderlessButtonStyle"
-                android:text="@string/reset"
-                android:layout_marginStart="10dp"/>
-
-    </LinearLayout>
-
-    <!-- BUTTON SAVE -->
-    <Button
-            android:id="@+id/button_save"
-            android:layout_width="@dimen/button_width"
-            android:layout_height="@dimen/button_height"
-            android:layout_below="@+id/layout_reset"
             android:layout_marginTop="30dp"
-            android:layout_marginEnd="30dp"
+            android:layout_gravity="end"
+            android:layout_below="@+id/recycler_view"
             android:layout_alignParentEnd="true"
-            android:text="@string/save"
-            style="?android:attr/borderlessButtonStyle"
-            android:textColor="@color/colorAccent"
-            android:background="@android:color/white"/>
+            android:orientation="horizontal">
+
+        <!-- BUTTON CANCEL -->
+        <Button
+                android:id="@+id/button_cancel"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:text="@string/cancel"
+                android:textColor="@color/colorAccent"
+                style="?android:attr/borderlessButtonStyle"
+                android:background="@android:color/white"/>
+
+        <!-- BUTTON SAVE -->
+        <Button
+                android:id="@+id/button_save"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:layout_marginStart="10dp"
+                android:text="@string/save"
+                android:textColor="@android:color/white"
+                style="?android:attr/borderlessButtonStyle"
+                android:background="@color/colorAccent"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
