--- a/app/src/main/res/layout/stat_info_layout.xml
+++ b/app/src/main/res/layout/stat_info_layout.xml
@@ -2,13 +2,15 @@
 <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v4.view.ViewPager
             android:id="@+id/stat_info_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="5dp">
+            android:padding="10dp"
+            android:layout_marginBottom="50dp">
 
     </android.support.v4.view.ViewPager>
 
@@ -16,9 +18,9 @@
             android:id="@+id/close_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="end"
             android:background="@null"
             android:src="@drawable/baseline_close_black_24"
-            android:layout_gravity="end|top"
             android:layout_margin="5dp"/>
 
     <android.support.design.widget.TabLayout
@@ -26,8 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabBackground="@drawable/tab_selector"
-            app:tabGravity="center"
             android:layout_gravity="bottom"
+            app:tabGravity="center"
             app:tabIndicatorHeight="0dp"/>
 
 </FrameLayout>
