--- a/app/src/main/res/layout/stat_info_panel5.xml
+++ b/app/src/main/res/layout/stat_info_panel5.xml
@@ -1,33 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:scrollbars="vertical"
+        android:fadeScrollbars="false"
+        android:scrollbarThumbVertical="@android:color/darker_gray">
 
-    <TextView
-            android:id="@+id/content_5th_panel_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/content_5th_panel_1"
-            android:layout_marginTop="10dp"/>
+    <RelativeLayout
 
-    <ImageView
-            android:id="@+id/image_chrono"
-            android:scaleType="fitCenter"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_below="@+id/content_5th_panel_1"
-            android:src="@drawable/chrono_example"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"/>
-
-    <TextView
-            android:id="@+id/content_5th_panel_2"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/content_5th_panel_2"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="50dp"/>
+            android:padding="10dp">
 
-</RelativeLayout>
+        <TextView
+                android:id="@+id/content_5th_panel_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/content_5th_panel_1"
+                android:layout_marginTop="10dp"/>
+
+        <ImageView
+                android:id="@+id/image_chrono"
+                android:scaleType="fitCenter"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_below="@+id/content_5th_panel_1"
+                android:src="@drawable/chrono_example"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"/>
+
+        <TextView
+                android:id="@+id/content_6th_panel_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/image_chrono"
+                android:text="@string/content_6th_panel_1"
+                android:layout_marginTop="20dp"/>
+
+        <TextView
+                android:id="@+id/content_5th_panel_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/content_5th_panel_2"
+                android:layout_marginTop="20dp"
+                android:layout_below="@+id/content_6th_panel_1"/>
+
+    </RelativeLayout>
+
+</ScrollView>
